hphp/test/zend7/Zend/tests/generators/bug63066.php.expectf
foo

Fatal error: %s
Stack trace:
#0 %s(%d): gen(Object(stdClass))
#1 {main}
  thrown in %sbug63066.php on line 5